--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	
-	<title>MUNTER - Free Bootstrap 3 One Page Theme</title> 
-	<meta name="description" content="BlackTie.co - Free Handsome Bootstrap Themes" />	    
-	<meta name="keywords" content="themes, bootstrap, free, templates, bootstrap 3, freebie,">
+	<title>Placeholder page</title>
+
 	<meta property="og:title" content="">
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -65,8 +64,8 @@
 		<div class="container">
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
-					<h1 class="font-semibold">MUNTER <span class="font-thin">DESIGN</span></h1>
-					<h4 class="font-thin">We are an <span class="font-semibold">independent interactive agency</span> based in London.</h4>
+					<h1 class="font-semibold">STRESSED OUT <span class="font-thin">DESIGN</span></h1>
+					<h4 class="font-thin">We are an <span class="font-semibold">anxiety ridden team</span> based in Rochester.</h4>
 					<br>
 					<br>
 				</div><!-- /col-12 -->
